# pants-pex-readme-collision-repro

./: README.md  pants.toml
cmd/: BUILD  main.py
src/py/a/: BUILD  README.md  pyproject.toml
src/py/b/: BUILD  README.md  pyproject.toml
src/py/b/b/: bowling.py
